2006-06-22  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/preferences-dialog.c (prefs_dialog_new): pack the
	page icon with 6px padding too, just as the page label.

2006-06-21  Sven Neumann  <sven@gimp.org>

	* app/tools/gimp-tools.c (gimp_tools_restore): don't attempt to
	reorder to a position >= container->num_children.

2006-06-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimprectangleselecttool.c: Always use crosshair cursor
	if shift or ctrl are down; fixes bug #345551.

2006-06-21  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/colormap-remap.c: moved hints to the bottom.

2006-06-21  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/colormap-remap.c: applied patch from Mukund
	Sivaraman that adds a "Reverse Order" option in favor of having
	ascending and descending sort functions.

2006-06-21  Sven Neumann  <sven@gimp.org>

	* docs/Makefile.am (EXTRA_DIST): stop distributing Wilber.svg.

	* libgimpcolor/gimpcolorspace.h: formatting.

2006-06-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimprectangleselecttool.c: if there is a floating
	selection and mouse is clicked outside it without movement, anchor it.

	* app/tools/gimprectangletool.c: corner handle area was scaling
	improperly when image was zoomed.

2006-06-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/dialogs/authors.h: autogenerated file; committing changes
	caused by Roman's previous commit.

2006-06-21  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/colormap-remap.c: added a right-click menu that
	allows to sort the colormap by hue, saturation or value.

2006-06-21  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/colormap-remap.c: added a Reset button and
	prepared for colormap sorting.

2006-06-21  Roman Joost  <romanofski@gimp.org>

	* AUTHORS
	* authors.xml: sorted previously added names alphabetically

2006-06-21  Sven Neumann  <sven@gimp.org>

	* libgimp/gimp.[ch] (gimp_shm_addr): return a const pointer.