@@ -1,3 +1,7 @@
+2006-06-22  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/colormap-remap.c: popup the menu on Shift-F10.
+
 2006-06-22  Michael Natterer  <mitch@gimp.org>
 
 	* app/dialogs/preferences-dialog.c (prefs_dialog_new): pack the
